# resume-builder

./: .gitignore  Cargo.toml  Cross.toml
.github/workflows/: release.yml
src/: main.rs
src/page_scrapers/: mod.rs  simplify.rs  workday.rs
src/resume_gen/: default_template.html  mod.rs
