[package]
name = "resume-builder"
version = "0.1.0"
edition = "2021"
description = "A command line application to generate resumes that are tailored to specific job applications"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "parking_lot"] }
serde = { version = "1", features = ["derive"] }
fxhash = "0.2"
reqwest = "0.11"
soup = "0.5"
anyhow = "1"
tokio-rayon = "2"
url = "2"