[package]
name = "resume-builder"
version = "0.1.0"
edition = "2021"
description = "A command line application to generate resumes that are tailored to specific job applications"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "parking_lot", "fs"] }
serde = { version = "1", features = ["derive"] }
fxhash = "0.2"
scraper = "0.17"
anyhow = "1"
tokio-rayon = "2"
url = { version = "2", features = ["serde"] }
rust-bert = { vesrion = "0.21", features = ["download-libtorch"]}
headless_chrome = "1.0.5"
bitcode = "0.5"
validator = { version = "0.16", features = ["derive", "phone"] }
regex = "1.10"
ordered-float = "4.1"

[profile.workflow-dev]
inherits = "dev"
opt-level = 1
lto = "thin"
incremental = false

[profile.release]
lto = true

[package.metadata.bundle]
name = "ResumeBuilder"
identifier = "com.manglemix.resume-builder"
icon = []
version = "0.1.0"
resources = []
copyright = "MIT OR Apache-2.0"
category = "Developer Tool"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
deb_depends = []
osx_frameworks = []
osx_url_schemes = ["com.manglemix.resume-builder"]